--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+
+* {
+  font-family: Caveat;
+}
+
 body {
-  background-color: hsl(0, 0%, 10%);
+  background-image: url("./assets/paint splash.jpg");
+  background-size: cover;
+  opacity: 0.8;
 }
 
 .to-do-list {
-  font-family: Helvetica;
   text-align: center;
   margin-top: 100px;
   display: flex;
@@ -13,7 +20,7 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
   color: white;
 }
 
@@ -29,24 +36,37 @@ button {
 }
 
 .add-btn {
-  background-color: hsl(125, 47%, 54%);
-  margin-left: 50px;
+  background-color: hsl(125, 47%, 55%);
+  border-radius: 25px;
+  margin-left: 20px;
 }
 
 .add-btn:hover {
-  background-color: hsl(125, 47%, 44%);
+  background-color: hsl(125, 47%, 45%);
 }
 
-.delete-btn {
+.reset-btn {
+  background-color: hsl(0, 70%, 55%);
+  border-radius: 25px;
+  margin-left: 20px;
+}
+
+.reset-btn:hover {
   background-color: hsl(0, 70%, 45%);
 }
 
+.delete-btn {
+  background-color: hsl(0, 70%, 55%);
+  border-radius: 25px;
+}
+
 .delete-btn:hover {
-  background-color: hsl(0, 70%, 35%);
+  background-color: hsl(0, 70%, 45%);
 }
 
 .move-btn {
   background-color: hsl(201, 83%, 51%);
+  border-radius: 25px;
   padding: 8px 8px;
   margin-left: 10px;
 }
@@ -58,8 +78,8 @@ button {
 input[type="text"] {
   font-size: 1.6rem;
   padding: 10px;
-  border: 2px solid hsla(0, 0%, 80%, 0.5);
-  border-radius: 5px;
+  border: 2px solid hsla(185, 93%, 45%, 0.5);
+  border-radius: 25px;
   color: hsla(0, 0%, 0%, 0.5);
 }
 
@@ -79,7 +99,7 @@ li {
   margin-bottom: 10px;
   background-color: hsl(0, 0%, 97%);
   border: 3px solid hsla(0, 0%, 85%, 0.75);
-  border-radius: 10px;
+  border-radius: 45px;
   display: flex;
   align-items: center;
 }
