--- a/src/index.css
+++ b/src/index.css
@@ -121,12 +121,14 @@ li {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-evenly;
   position: fixed;
   left: 0;
   bottom: 0;
+  height: 40px;
   width: 100%;
   background-color: white;
-  color: slategray;
+  color: black;
   text-align: center;
 }
